Third commit - restructured the project and added files like init.php

--- a/app/Views/HomeView.html
+++ b/app/Views/HomeView.html
@@ -1,5 +1,5 @@
 <!doctype html>
-{extends file=$conf->root_path|cat:"/templates/main.html"}
+{extends file=$conf->root_path|cat:"/app/views/templates/main.tpl"}
 {block name=content}
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="pl" lang="pl">
