--- a/app/Views/CalcView.html
+++ b/app/Views/CalcView.html
@@ -1,5 +1,5 @@
 <!doctype html>
-{extends file=$conf->root_path|cat:"/templates/main.html"}
+{extends file=$conf->root_path|cat:"/app/views/templates/main.tpl"}
 {block name=content}
 
 <div style="margin: 40px 45%">
